--- a/src/style.scss
+++ b/src/style.scss
@@ -5053,7 +5053,8 @@ box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25), -4px -4px 10px rgba(0, 0, 0, 0.25)
 }
 
 .rhythm-buttons{
-    margin-top: 5vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
     width: 40vw;
     display: flex;
     flex-direction: row;
@@ -5065,8 +5066,7 @@ box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25), -4px -4px 10px rgba(0, 0, 0, 0.25)
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 962px;
-    height: 322px;
+    height: 522px;
     background: #FFFFFF;
     border: 2px solid #E5E5E5;
     box-sizing: border-box;
