--- a/src/style.scss
+++ b/src/style.scss
@@ -5053,6 +5053,7 @@ box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25), -4px -4px 10px rgba(0, 0, 0, 0.25)
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width:  100%;
     height: 522px;
     background: #FFFFFF;
     border: 2px solid #E5E5E5;
@@ -5093,6 +5094,13 @@ color: #2BA0CC;
     box-shadow: 4px 4px 10px #FFC300, -4px -4px 10px #FFC300;
     border-radius: 25px;
     margin-top: 42px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    font-size: 40px;
 }
 
 .rhythm-f{
@@ -9242,7 +9250,7 @@ letter-spacing: 0.03em;
     justify-content: space-around;
     border: 2px gray solid;
     border-radius: 20px;
-    width: 75%;
+    width: 85%;
     padding: 4px;
 }
 
